# CrysDiS

./: .dockerignore  .gitignore  CrysDiS.py  Dockerfile  README.md  crystal_diffraction_simulator_nice_gui.py  custom_crystals_local.json  environment.yml  package_macos.sh  package_windows.ps1  pyproject.toml  requirements.txt
.github/workflows/: build-macos-tkinter.yml  build-macos.yml
CrysDiS_tkinter/: CrysDiS_tkinter.py  environment-tkinter.yml  pack_tkinter_onedir.py  package_macos_tkinter.sh  requirements-tkinter-build.txt  requirements-tkinter-runtime.txt
CrysDiS_tkinter/packaging/: custom_crystals_local.json
CrysDiS_tkinter/scripts/: verify_tkinter_linux_bundle.sh
docs/: DEPLOYMENT.md  PACKAGING.md
