[project]
name = "crysdis"
version = "0.1.0"
description = "CrysDiS: a browser-based crystal structure and electron diffraction simulator built with NiceGUI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.13,<4",
    "numpy>=2.0",
    "plotly>=6.0",
    "matplotlib>=3.8",
    "pymatgen>=2024.0",
    "periodictable>=2.0",
]

[project.scripts]
crysdis = "CrysDiS:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["CrysDiS"]
